[package]
name = "soundkit-opus"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Opus Encoder traits"
repository = "https://github.com/wavey-ai/soundkit-opus"
readme = "README.md"

[dependencies]
libopus = { git = "https://github.com/wavey-ai/opus-rs", rev = "e38e510", version = "0.1.0" }
soundkit = { git = "https://github.com/wavey-ai/soundkit" }
#soundkit = "0.11.3"

[lib]
crate-type = ["cdylib", "rlib"]
